--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Reto en html y css",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "compile:sass": "sass src/assets/sass/main.scss src/assets/css/main.css --watch"
   },
   "repository": {
     "type": "git",
@@ -19,5 +20,8 @@
   "bugs": {
     "url": "https://github.com/JohnDGC/challenge-one/issues"
   },
-  "homepage": "https://github.com/JohnDGC/challenge-one#readme"
+  "homepage": "https://github.com/JohnDGC/challenge-one#readme",
+  "dependencies": {
+    "sass": "^1.55.0"
+  }
 }
